Finished Modal and did some alignment fixes throughout the page

--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@ footer {
     font-size: 18px;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+}
+
 button {
     background-color: #3882F6;
     color: white;
@@ -47,7 +54,7 @@ a {
     display: flex;
     width: 30%;
     justify-content: space-around;
-    gap: 12px;    
+    padding-left: 20%    
 }
 
 .hbody {
@@ -107,8 +114,7 @@ a {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 48px;
-    margin-bottom: 150px
+    gap: 36px;
 }
 
 .info1 {
@@ -140,7 +146,7 @@ a {
     
 }
 .infoimg {
-    width: 300px;
+    width: 250px;
     height: 200px;
     border: solid blue;
     align-self: center;
@@ -161,7 +167,8 @@ a {
     font-weight: 300;
     font-style: italic;
     color: #1F2937;
-    padding: 5%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     margin-top: 250px;
     margin-bottom: 250px;
 }
@@ -186,16 +193,52 @@ a {
     display: flex;
     flex-wrap: wrap;
     background-color: #3882F6;
-    justify-content: center;
-    align-content: center;
-    margin: 96px;
-    padding: 64px;
+    justify-content: space-around;
+    align-items: :  center;
     border-radius: 12px;
+    font-size: 18px;
+    color: #E5E7EB;
+    height: 200px;
+    width: 60%;
 }
+
+.ctaleft {
+    display: flex;
+    flex-flow: column wrap;
+    width: fit-content;
+    justify-content: center;
+    align-items: flex-start;
+    
+}
+
+.cta1 {
+    align-items: flex-start ;
+    margin-bottom: 0px;
+}
+.cta2 {
+    align-content: flex-end ;
+    margin-bottom: 17%;
+}
+
+.button2 {
+    align-self: center;
+    border: solid medium;
+    color: white;
+    font-weight: 600;
+    font-size: medium;
+    padding-left: 38px;
+    padding-right: 38px;
+    border-radius: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+        
+}
+
 
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 120px
+    margin-top: 180px;
+    width: 100%
 }
